Add exercise type and show exercise count in workouts (#16)